# cpp_particleCode

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.sh
.docker_configs/: .bashrc  .gitconfig  .gitignore_global  .inputrc  .vimrc
ext/: CMakeLists.txt
profiling/: bg_run_ens.sh  bg_run_ens.txt  run_profile_ens.sh
profiling/data/: particleParams.yaml
src/: CMakeLists.txt  parPT.cpp  particleRW.cpp  plot.sh  run.sh
src/data/: particleParams.yaml  particleParams.yml
src/tests/MT_only/: MT_only_input.yaml  gen_pts.py3  plot_MT_only.ipynb  run_MT_only.sh
src/tests/MT_only/data/: MT_only_input.yaml
src/tests/RWMT/: RWMT_input.yaml  plot_RWMT.ipynb  run_RWMT.sh
src/tests/RWMT/data/: RWMT_input.yaml
src/tests/RW_only/: RW_only_input.yaml  gen_pts.py3  plot_RW_only.ipynb  run_RW_only.sh
src/tests/RW_only/data/: RW_only_input.yaml
src/tests/utils/: gen_pts.py3
src/unit_test/: CMakeLists.txt
src/unit_test/algorithms/arborx/: CMakeLists.txt  ax_brute_compare.cpp  gen_pts.py3  run_ax_compare.sh.in  run_ax_test.sh.in  verify_arborx.py3
src/unit_test/arborx/: CMakeLists.txt  arborx_test.cpp  ax_brute_compare.cpp  gen_pts.m  gen_pts.py3  mat2yaml.ipynb  run_ax_compare.sh  run_ax_compare.sh.in  run_ax_test.sh  run_ax_test.sh.in  test_pts.mat  test_pts.yaml  verify_arborx.m  verify_arborx.py3
src/unit_test/physics/diffusion/: CMakeLists.txt  run_mt_test.sh.in  run_rw_test.sh.in
src/unit_test/physics/diffusion/data/: mt_test_2d.yaml  rw_test_1d.yaml  rw_test_2d.yaml
src/unit_test/physics/diffusion/utils/: 1d_mt_verify.ipynb  1d_rw_verify.ipynb  2d_mt_verify.ipynb  2d_rw_verify.ipynb  2d_test_verify.ipynb  README.md  gen_pts.py3  verify_mt.py3  verify_rw.py3
src/utils/: CMakeLists.txt  brute_force_crs_policy.hpp  constants.hpp  containers.cpp  containers.hpp  mass_transfer.cpp  mass_transfer.hpp  parPT_config.h.in  parPT_config.hpp.in  parPT_io.cpp  parPT_io.hpp  particles.cpp  particles.hpp  random.cpp  random.hpp  random_walk.cpp  random_walk.hpp  tree_crs_policy.hpp  type_defs.hpp  utilities.cpp  utilities.hpp  version_info.cpp  version_info.hpp
src/utils/plotting/: plotParticles.py3
testing/: test_arborx.m
